# benchmarks

./: .gitignore  README.md  __main__.py  correct_json.json  correct_json_full.json  geval.ipynb  inference.example.env  judge_google_proxy.example.env  judge_openai_api.example.env  main.py  pyproject.toml
geval_test/: geval.py  inference.py  main.py  models.py  settings.py
geval_test/judge/: __init__.py  google.py  openai_api.py
meno_bench/: geval.py  inference.py  main.py  models.py  plotting.py  settings.py  xl.py
meno_bench/judge/: __init__.py  gig.py  google.py  judge.py  openai_api.py  proxy.py  summary.py
