[project]
name = "geval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepeval>=3.7.2",
    "dotenv>=0.9.9",
    "google-genai>=1.52.0",
    "httpx[socks]>=0.28.1",
    "ipykernel>=7.1.0",
    "nest-asyncio>=1.6.0",
    "openai>=2.8.1",
    "python-socks>=2.7.3",
    "tqdm>=4.67.1",
    "zstd>=1.5.7.2",
]
