[project]
name = "meno-bench"
version = "0.4.16"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepeval>=3.7.2",
    "dotenv>=0.9.9",
    "gigachat>=0.1.43",
    "google-genai>=1.52.0",
    "httpx[socks]>=0.28.1",
    "ipykernel>=7.1.0",
    "kaleido>=1.2.0",
    "nest-asyncio>=1.6.0",
    "openai>=2.8.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "python-socks>=2.7.3",
    "rouge-score>=0.1.2",
    "tqdm>=4.67.1",
    "typer>=0.20.0",
    "zstd>=1.5.7.2",
]

[project.scripts]
meno-bench = "meno_bench:main.main"
